@@ -34,6 +34,7 @@
 // Imported for direct call to class_poseAs.  Should be removed
 // if we ever drop posing hacks.
 #import <objc/objc-class.h>
+#import <objc/objc-runtime.h>
 
 // These are a little larger than typical because dragging links is a fairly
 // advanced feature that can confuse non-power-users
@@ -114,9 +115,9 @@ static BOOL forceRealHitTest = NO;
     // Avoid indirect invocation of any class initializers.  This is a work-around to prevent
     // the +initializers being called before the REQUIRED AppKit initialization
     // that's done in +[NSApplication load].
-    class_poseAs(NSClassFromString(@"WebNSView"), NSClassFromString(@"NSView"));
-    class_poseAs(NSClassFromString(@"WebNSTextView"), NSClassFromString(@"NSTextView"));
-    class_poseAs(NSClassFromString(@"WebNSWindow"), NSClassFromString(@"NSWindow"));
+    class_poseAs(objc_getClass("WebNSView"), objc_getClass("NSView"));
+    class_poseAs(objc_getClass("WebNSTextView"), objc_getClass("NSTextView"));
+    class_poseAs(objc_getClass("WebNSWindow"), objc_getClass("NSWindow"));
 
     [pool release];
 }
